test/classes/diten/nilDynamicDispatch.good
nilDynamicDispatch.chpl:21: error: attempt to dereference nil
